kubernetes/alertwebhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertwebhook
  labels:
    app: alertwebhook
spec:
  selector:
    matchLabels:
      app: alertwebhook
  replicas: 1
  template:
    metadata:
      labels:
        app: alertwebhook
    spec:
      containers:
        - image: springcloud/scdf-alert-webhook:latest
          name: alertwebhook
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          resources:
            limits:
              cpu: 0.5
              memory: 2048Mi
            requests:
              cpu: 0.5
              memory: 1024Mi
