kubernetes/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #  cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - grafana.jedi.paradymelabs.com
      secretName: grafana-certificate
  rules:
    - host: grafana.jedi.paradymelabs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: scdf-grafana
              servicePort: 80
