kubernetes/scdf-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scdf-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - dataflows.jedi.paradymelabs.com
      secretName: dataflow-certificate
  rules:
    - host: dataflows.jedi.paradymelabs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: scdf-data-flow-server
              servicePort: 80
